Fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -50,12 +50,20 @@ tbody {
 /* mostly constant throughout pages */
 /*title */
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   background: rgb(12,12,12);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: rgb(243,243,243);
 }
 
 .light-mode {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
     background: rgb(243,243,243);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(12,12,12);
@@ -91,7 +99,6 @@ a:active {
 
 /* basic set-up non aligned elements*/
 p {
-  font-size: small;
   padding-left: 5%;
   padding-right: 5%;
 }
